show flash animation by clicking

--- a/src/index.pug
+++ b/src/index.pug
@@ -10,7 +10,7 @@ html
 		meta(name='viewport' content='width=device-width, initial-scale=1.0')
 
 		meta(name='description' content='Write a message for someone')
-		meta(name='author' content='Eddie Wen | 溫奕書')
+		meta(name='author' content='Eddie Wen | 温奕書')
 		meta(name='URL' content='http://github.eddiewen.me/MessageBoard/')
 		meta(name='image' content='http://github.eddiewen.me/MessageBoard/images/website.png')
 
@@ -23,7 +23,7 @@ html
 
 	body.v-mid.bg-white
 
-		input#content.mid(type='text' value='離開一下，馬上回來。')
+		input#content.mid.animated(type='text' value='離開一下，馬上回來。')
 
 		.control-area
 
